Add partner logos and update team images

--- a/index.html
+++ b/index.html
@@ -189,21 +189,91 @@
     <p class="lead">From chains and wallets to DeFi and infrastructure.</p>
 
     <div class="marquee" id="marquee" style="margin-top:22px">
+
       <div class="track" aria-hidden="false">
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20h30M55 20h30M90 20h30M125 20h15"/></svg></div><div class="name">Project Alpha</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 30L60 10 100 30 140 10"/></svg></div><div class="name">Wallet Beta</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20a12 12 0 1 0 24 0a12 12 0 1 0-24 0M60 10h80"/></svg></div><div class="name">DeFi Gamma</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 32V8h40v24zM68 32V8h72"/></svg></div><div class="name">Infra Delta</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20l20-10 20 10-20 10zM80 10h60M80 30h60"/></svg></div><div class="name">Launchpad Epsilon</div></div>
-      </div>
-      <div class="track" aria-hidden="true">
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20h30M55 20h30M90 20h30M125 20h15"/></svg></div><div class="name">Project Alpha</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 30L60 10 100 30 140 10"/></svg></div><div class="name">Wallet Beta</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20a12 12 0 1 0 24 0a12 12 0 1 0-24 0M60 10h80"/></svg></div><div class="name">DeFi Gamma</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 32V8h40v24zM68 32V8h72"/></svg></div><div class="name">Infra Delta</div></div>
-        <div class="partner"><div class="logo-box"><svg viewBox="0 0 160 40"><path d="M20 20l20-10 20 10-20 10zM80 10h60M80 30h60"/></svg></div><div class="name">Launchpad Epsilon</div></div>
-      </div>
-    </div>
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy"></div>
+    <div class="name">Valar</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/crypto_casino.svg" alt="Crypto Casino" loading="lazy"></div>
+    <div class="name">Crypto Casino</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/pera.svg" alt="Pera" loading="lazy"></div>
+    <div class="name">Pera</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/bebe_bloom.svg" alt="Bebe Bloom" loading="lazy"></div>
+    <div class="name">Bebe Bloom</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy"></div>
+    <div class="name">Opulous</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Layer_One_X.svg" alt="Layer One X" loading="lazy"></div>
+    <div class="name">Layer One X</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy"></div>
+    <div class="name">Tinyman</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Algomint.svg" alt="Algomint" loading="lazy"></div>
+    <div class="name">Algomint</div>
+  </div>
+</div>
+
+     <div class="track" aria-hidden="true">
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy"></div>
+    <div class="name">Valar</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/crypto_casino.svg" alt="Crypto Casino" loading="lazy"></div>
+    <div class="name">Crypto Casino</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/pera.svg" alt="Pera" loading="lazy"></div>
+    <div class="name">Pera</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/bebe_bloom.svg" alt="Bebe Bloom" loading="lazy"></div>
+    <div class="name">Bebe Bloom</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy"></div>
+    <div class="name">Opulous</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Layer_One_X.svg" alt="Layer One X" loading="lazy"></div>
+    <div class="name">Layer One X</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy"></div>
+    <div class="name">Tinyman</div>
+  </div>
+
+  <div class="partner">
+    <div class="logo-box"><img src="./assets/logos/Algomint.svg" alt="Algomint" loading="lazy"></div>
+    <div class="name">Algomint</div>
+  </div>
+</div>
+
   </div>
 </section>
 
@@ -215,18 +285,24 @@
 
     <div class="team-grid">
       <article class="person">
-        <div class="badge">F</div>
-        <h3>Furqan block in the wall</h3>
-        <div class="role">Head of growth and strategy</div>
-        <p class="bio">Community creativity and data that scale activation retention and advocacy.</p>
-      </article>
+  <div class="avatar">
+    <img src="./assets/team/furqan.jpg" alt="Furqan — Head of Growth and Strategy" loading="lazy">
+  </div>
+  <h3>Furqan block in the wall</h3>
+  <div class="role">Head of growth and strategy</div>
+  <p class="bio">Community creativity and data that scale activation retention and advocacy.</p>
+</article>
+
 
       <article class="person">
-        <div class="badge">T</div>
-        <h3>Tarek TarekCrypt</h3>
-        <div class="role">Head of operations and partnerships</div>
-        <p class="bio">Building bridges between innovation teams and audiences beyond Web3.</p>
-      </article>
+  <div class="avatar">
+    <img src="./assets/team/tarek.jpg" alt="Tarek — Head of Operations and Partnerships" loading="lazy">
+  </div>
+  <h3>Tarek TarekCrypt</h3>
+  <div class="role">Head of operations and partnerships</div>
+  <p class="bio">Building bridges between innovation teams and audiences beyond Web3.</p>
+</article>
+
     </div>
   </div>
 </section>
