Team and partners images fix

--- a/index.html
+++ b/index.html
@@ -286,21 +286,24 @@
     <div class="team-grid">
       <article class="person">
   <div class="avatar">
-    <img src="./assets/team/furqan.jpg" alt="Furqan — Head of Growth and Strategy" loading="lazy">
+    <img src="./assets/team/furqan.jpg" alt="Furqan — Head of growth and strategy" loading="lazy">
   </div>
   <h3>Furqan block in the wall</h3>
-  <div class="role">Head of growth and strategy</div>
-  <p class="bio">Community creativity and data that scale activation retention and advocacy.</p>
+  <div class="role">Co-Founder</div>
+  <p class="bio">Marketing and Growth Consultant.</p>
 </article>
+
 
 
       <article class="person">
   <div class="avatar">
-    <img src="./assets/team/tarek.jpg" alt="Tarek — Head of Operations and Partnerships" loading="lazy">
+    <img src="./assets/team/tarek.jpg" alt="Furqan — Head of growth and strategy" loading="lazy">
   </div>
   <h3>Tarek TarekCrypt</h3>
-  <div class="role">Head of operations and partnerships</div>
-  <p class="bio">Building bridges between innovation teams and audiences beyond Web3.</p>
+  <div class="role">Co-Founder</div>
+  <p class="bio">Community Specialist.</p>
+</article>
+
 </article>
 
     </div>
