Image and wording fixes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="container">
     <span class="label">Web3 roots</span>
     <h1 class="reveal" style="-webkit-text-fill-color:transparent;background:linear-gradient(135deg,#fff 10%,var(--accent) 90%);-webkit-background-clip:text">Boundless horizons</h1>
-    <p class="lead reveal">Community first growth expanded to search product and performance without losing the soul.</p>
+    <p class="lead reveal">Growth that feels human.</p>
     <div class="cta reveal">
       <a class="btn" href="#contact">Start your journey</a>
       <a class="btn ghost" href="#community">Explore services</a>
@@ -76,9 +76,9 @@
 
 <section class="section" id="community" data-mode="dark" data-accent="teal">
   <div class="container">
-    <span class="label">Community foundations</span>
+    <span class="label">Origins</span>
     <h2>Where we began and still lead</h2>
-    <p class="lead">Four pillars built in Web3 and tuned for people.</p>
+    <p class="lead">Four pillars tuned for people.</p>
 
     <div class="blocks">
       <div class="block">
@@ -112,14 +112,14 @@
   <div class="story-backdrop" aria-hidden="true"></div>
   <div class="container wrap">
     <span class="badge-s">Our Story</span>
-    <h2 style="margin-top:10px">Expanding beyond Web3 — without losing our community DNA</h2>
+    <h2 style="margin-top:10px">Expanding beyond Web3 <br> Without losing our community DNA</h2>
     <p class="lead">We cut our teeth in Web3, mastering rituals, activation loops, and trust. That same playbook now powers search, performance, and product for teams reaching audiences beyond crypto.</p>
 
     <div class="story-grid" style="margin-top:18px">
       <article class="card">
         <span class="badge-s">Phase 1</span>
         <h3>Born in communities</h3>
-        <p>We shipped moderation, support, growth, and management at pace — creating spaces people actually want to be in.</p>
+        <p>We shipped moderation, support, growth, and management at pace, creating spaces people actually want to be in.</p>
       </article>
 
       <article class="card">
@@ -131,7 +131,7 @@
       <article class="card">
         <span class="badge-s">Now</span>
         <h3>Beyond Web3</h3>
-        <p>SEO, AEO, paid performance, and product experiments — all informed by community telemetry, not guesswork.</p>
+        <p>SEO, AEO, paid performance, and product experiments, all informed by community telemetry, not guesswork.</p>
       </article>
     </div>
 
@@ -140,148 +140,146 @@
       <a class="btn ghost" href="#contact">Talk to us</a>
     </div>
   </div>
-</section>
 
+<!-- Services -->
 <div class="divider" aria-hidden="true"></div>
 
 <section class="section" id="services" data-mode="dark" data-accent="cyan">
   <div class="container">
-    <span class="label">Beyond Web3</span>
-    <h2>Modular senior led services</h2>
-    <p class="lead">Full stack growth without bloat. Use exactly what you need.</p>
+    <span class="label">Expanded Horizons</span>
+    <h2>Growth that connects and converts</h2>
+    <p class="lead">Covering your needs across search, performance, and media.</p>
 
     <div class="grid6">
-      <div class="service">
-        <svg class="icon" viewBox="0 0 24 24"><path d="M3 20h18M4 17l6-10 5 7 2-3 3 6"/></svg>
+      <!-- SEO -->
+      <article class="service">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 20h18M4 17l6-10 5 7 2-3 3 6"/></svg>
         <h3>SEO</h3>
-        <p>Technical content and authority for compounding growth.</p>
-      </div>
-      <div class="service">
-        <svg class="icon" viewBox="0 0 24 24"><path d="M4 12h16M12 4v16"/></svg>
+        <p>Technical foundations, content, and authority that compound.</p>
+      </article>
+
+      <!-- AEO -->
+      <article class="service">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 12h16M12 4v16"/></svg>
         <h3>AEO</h3>
         <p>Answer engine optimization for AI search and assistants.</p>
-      </div>
-      <div class="service">
-        <svg class="icon" viewBox="0 0 24 24"><path d="M4 6h16M8 12h12M10 18h10"/></svg>
-        <h3>Paid Ads</h3>
-        <p>Intent aligned campaigns across Google and social.</p>
-      </div>
-      <div class="service">
-        <svg class="icon" viewBox="0 0 24 24"><path d="M4 5h16v14H4zM8 5v14M4 9h16"/></svg>
+      </article>
+
+      <!-- Paid Performance -->
+      <article class="service">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 6h16M8 12h12M10 18h10"/></svg>
+        <h3>Paid Performance</h3>
+        <p>Search and social campaigns aligned to intent and ROAS.</p>
+      </article>
+
+      <!-- WordPress Development -->
+      <article class="service">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 5h16v14H4zM8 5v14M4 9h16"/></svg>
         <h3>WordPress Development</h3>
-        <p>Fast secure and easy to ship with design systems.</p>
-      </div>
-      <div class="service">
-        <svg class="icon" viewBox="0 0 24 24">
-          <path d="M4 6h16v12H4z"/><path d="M10 9l6 3-6 3z"/>
-        </svg>
-        <h3>Graphics and Video</h3>
-        <p>Campaign visuals edits motion and short form content.</p>
-      </div>
+        <p>Fast, secure builds with design systems and clean handover.</p>
+      </article>
+
+      <!-- Creative: Graphics & Video -->
+      <article class="service">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 6h16v12H4z"/><path d="M10 9l6 3-6 3z"/></svg>
+        <h3>Creative</h3>
+        <p>Brand assets, motion, and short-form content that lands.</p>
+      </article>
     </div>
   </div>
 </section>
+
+
+<div class="divider" aria-hidden="true"></div>
 
 <section class="section" id="partners" data-mode="dark" data-accent="teal">
   <div class="container">
     <span class="label">Collaborators</span>
     <h2>Projects we have worked with</h2>
-    <p class="lead">From chains and wallets to DeFi and infrastructure.</p>
+    <p class="lead">Across industries and ideas, our partners are united by a focus on understanding and serving their users.</p>
 
     <div class="marquee" id="marquee" style="margin-top:22px">
-
+      <!-- Track A -->
       <div class="track" aria-hidden="false">
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy"></div>
-    <div class="name">Valar</div>
-  </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy" decoding="async"></div>
+          <div class="name">Valar</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/crypto_casino.jpg" alt="Crypto Casino" loading="lazy" decoding="async"></div>
+          <div class="name">Crypto Casino</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/pera.jpg" alt="Pera" loading="lazy" decoding="async"></div>
+          <div class="name">Pera</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/bebe_bloom.jpg" alt="Bebe Bloom" loading="lazy" decoding="async"></div>
+          <div class="name">Bebe Bloom</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy" decoding="async"></div>
+          <div class="name">Opulous</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/Layer_One_X.jpg" alt="Layer One X" loading="lazy" decoding="async"></div>
+          <div class="name">Layer One X</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy" decoding="async"></div>
+          <div class="name">Tinyman</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/Algomint.svg" alt="Algomint" loading="lazy" decoding="async"></div>
+          <div class="name">Algomint</div>
+        </div>
+      </div>
 
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/crypto_casino.svg" alt="Crypto Casino" loading="lazy"></div>
-    <div class="name">Crypto Casino</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/pera.svg" alt="Pera" loading="lazy"></div>
-    <div class="name">Pera</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/bebe_bloom.svg" alt="Bebe Bloom" loading="lazy"></div>
-    <div class="name">Bebe Bloom</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy"></div>
-    <div class="name">Opulous</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Layer_One_X.svg" alt="Layer One X" loading="lazy"></div>
-    <div class="name">Layer One X</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy"></div>
-    <div class="name">Tinyman</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Algomint.svg" alt="Algomint" loading="lazy"></div>
-    <div class="name">Algomint</div>
-  </div>
-</div>
-
-     <div class="track" aria-hidden="true">
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy"></div>
-    <div class="name">Valar</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/crypto_casino.svg" alt="Crypto Casino" loading="lazy"></div>
-    <div class="name">Crypto Casino</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/pera.svg" alt="Pera" loading="lazy"></div>
-    <div class="name">Pera</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/bebe_bloom.svg" alt="Bebe Bloom" loading="lazy"></div>
-    <div class="name">Bebe Bloom</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy"></div>
-    <div class="name">Opulous</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Layer_One_X.svg" alt="Layer One X" loading="lazy"></div>
-    <div class="name">Layer One X</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy"></div>
-    <div class="name">Tinyman</div>
-  </div>
-
-  <div class="partner">
-    <div class="logo-box"><img src="./assets/logos/Algomint.svg" alt="Algomint" loading="lazy"></div>
-    <div class="name">Algomint</div>
-  </div>
-</div>
-
+      <!-- Track B (duplicate of A for seamless loop) -->
+      <div class="track" aria-hidden="true">
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/valar.svg" alt="Valar" loading="lazy" decoding="async"></div>
+          <div class="name">Valar</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/crypto_casino.jpg" alt="Crypto Casino" loading="lazy" decoding="async"></div>
+          <div class="name">Crypto Casino</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/pera.jpg" alt="Pera" loading="lazy" decoding="async"></div>
+          <div class="name">Pera</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/bebe_bloom.jpg" alt="Bebe Bloom" loading="lazy" decoding="async"></div>
+          <div class="name">Bebe Bloom</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/opulous.svg" alt="Opulous" loading="lazy" decoding="async"></div>
+          <div class="name">Opulous</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/Layer_One_X.jpg" alt="Layer One X" loading="lazy" decoding="async"></div>
+          <div class="name">Layer One X</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/Tinyman.svg" alt="Tinyman" loading="lazy" decoding="async"></div>
+          <div class="name">Tinyman</div>
+        </div>
+        <div class="partner">
+          <div class="logo-box"><img src="./assets/logos/algomint.svg" alt="Algomint" loading="lazy" decoding="async"></div>
+          <div class="name">Algomint</div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
+
 
 <section class="section light" id="team" data-mode="light" data-accent="purple">
   <div class="container">
     <span class="label">Team</span>
     <h2>Builders behind the flywheel</h2>
-    <p class="lead">Two operators where community product and performance meet.</p>
 
     <div class="team-grid">
       <article class="person">
@@ -316,13 +314,13 @@
     <div class="person">
       <h2>Build your community flywheel</h2>
       <p class="lead">Tell us about your project and we will map the route from zero to sustained momentum.</p>
-      <div class="cta"><a class="btn" href="mailto:hello@qanomaly.xyz">hello@qanomaly.xyz</a></div>
+      <div class="cta"><a class="btn" href="mailto:hello@qanomaly.com">hello@qanomaly.com</a></div>
     </div>
   </div>
 </section>
 
 <footer class="section" style="padding:40px 0" data-mode="dark" data-accent="teal">
-  <div class="container" style="opacity:.85">© <span id="yr"></span> Qanomaly</div>
+  <div class="container" style="opacity:.85">© <span id="yr"></span> Qanomaly Pty Ltd</div>
 </footer>
 
 <!-- JS -->
